# Mnemo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
examples/: example_dream.py  example_knowledge_graph.py  example_usage.py
src/: __init__.py  cli.py
src/core/: __init__.py  agent.py  config.py  memory.py  scheduler.py
src/dream_engine/: __init__.py  condenser.py  core.py  integrator.py  synthesizer.py
src/knowledge_graph/: __init__.py  graph.py  query_engine.py  storage.py
src/perceiver/: __init__.py  base.py  doc_crawler.py  paper_reader.py  web_search.py
src/reasoning/: __init__.py  chain.py  engine.py  logic.py
src/self_evolution/: __init__.py  learner.py  optimizer.py
tests/: test_mnemo.py
