[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemo"
version = "0.1.0"
description = "Autonomous Research Agent with Dream Distillation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Moggan", email = "moggan@example.com"}
]
keywords = ["research", "agent", "knowledge-graph", "ai", "dream", "distillation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "networkx>=3.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "tenacity>=8.2.0",
    "arxiv>=1.4.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "tiktoken>=0.5.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "rapidfuzz>=3.5.0",
    "duckduckgo-search>=4.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[project.scripts]
mnemo = "mnemo.cli:main"

[project.urls]
Homepage = "https://github.com/moggan1337/Mnemo"
Repository = "https://github.com/moggan1337/Mnemo"
Documentation = "https://github.com/moggan1337/Mnemo#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
